vizrt.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1413,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.68,
  "homepage_snapshot_redirected_domain": "vizrt.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001155735id_/http://vizrt.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001155735id_/http%3A//vizrt.com",
  "interval": "2007_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "vizrt.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230103422id_/http%3A//vizrt.com/db/106/121/privacy.ehtml",
  "policy_title": "Vizrt",
  "policy_url": "vizrt.com/db/106/121/privacy.ehtml",
  "sha1": "bb4dfbad8fa6357f4f9efea81364bd8a9df5428e",
  "simhash": 7239122533985476732,
  "simhash_updated": false,
  "site_hostname": "vizrt.com",
  "site_url": "http://vizrt.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071230103422",
  "word_count": 237,
  "year": 2007
}

--- a/v/vi/viz/vizrt.com.html
+++ b/v/vi/viz/vizrt.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vizrt.com privacy policy that was archived on 2007-05-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070516215055id_/http%3A//www.vizrt.com/db/106/121/privacy.ehtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vizrt.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230103422id_/http%3A//vizrt.com/db/106/121/privacy.ehtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<title>Vizrt</title>
@@ -143,7 +143,9 @@ with(milonic=new menuname("products")){
 	aI("image=/db/1/3/56NormalStyle.png;overimage=/db/1/3/56HoverStyle.png;url=/db/106/7/56/document20.ehtml;");
 	aI("image=/db/1/3/1199NormalStyle.png;overimage=/db/1/3/1199HoverStyle.png;url=/db/106/7/1199/document1223.ehtml;");
 	aI("image=/db/1/3/90NormalStyle.png;overimage=/db/1/3/90HoverStyle.png;url=/db/106/7/90/document37.ehtml;");
+	aI("image=/db/1/3/1201NormalStyle.png;overimage=/db/1/3/1201HoverStyle.png;url=/db/106/7/1201/document1238.ehtml;");
 	aI("image=/db/1/3/1182NormalStyle.png;overimage=/db/1/3/1182HoverStyle.png;url=/db/106/7/1182/System_Overview.pdf;");
+	aI("image=/db/1/3/1185NormalStyle.png;overimage=/db/1/3/1185HoverStyle.png;url=/db/106/7/1185/Vizrt_Brochures.zip;");
 }
 
 
@@ -159,6 +161,7 @@ with(milonic=new menuname("SUPPORT")){
 				
 	aI("image=/db/1/3/1183NormalStyle.png;overimage=/db/1/3/1183HoverStyle.png;url=/perl/helpdesk;");
 	aI("image=/db/1/3/1184NormalStyle.png;overimage=/db/1/3/1184HoverStyle.png;url=http://forum.vizrt.com/;");
+	aI("image=/db/1/3/1202NormalStyle.png;overimage=/db/1/3/1202HoverStyle.png;url=/db/106/8/document1218.ehtml;");
 }
 
 
@@ -178,7 +181,6 @@ with(milonic=new menuname("NEWS")){
 				
 	aI("image=/db/1/3/33NormalStyle.png;overimage=/db/1/3/33HoverStyle.png;url=/db/106/10/33/document601.ehtml?Year=2007;");
 	aI("image=/db/1/3/34NormalStyle.png;overimage=/db/1/3/34HoverStyle.png;url=/db/106/10/34/tradeshows.ehtml;");
-	aI("image=/db/1/3/1143NormalStyle.png;overimage=/db/1/3/1143HoverStyle.png;url=/db/106/10/1143/document1138.ehtml;");
 }
 
 
@@ -332,6 +334,8 @@ drawMenus();
 	<tr>
 		<td><a href="/db/106/7/1150/document1038.ehtml"><img src="/db/106/131/142/s_mobile_tv_solutions.gif" onmouseover="changeImage(this,'/db/106/131/142/s_mobile_tv_solutions_hover.gif');" onmouseout="changeImage(this,'/db/106/131/142/s_mobile_tv_solutions.gif');" alt="MOBILE TV" border="0" class="left_menu_image"></a></td>
 	</tr>
+
+
 
 
 
@@ -800,6 +804,10 @@ drawMenus();
 
 
 
+
+
+
+
 </tbody></table></div>
 				<div class="left_misc1"></div>
 				<div class="left_misc2"><table cellspacing="0" cellpadding="0" align="left" border="0">
@@ -822,7 +830,7 @@ drawMenus();
 <!--
 document.write('<a href="/perl/print?document=' + document.location + '" target="_blank">printer-friendly&nbsp;<img src="/img/icon_printer.gif" width="13" height="10" border="0" alt=""><'+'/a>');
 //-->
-</script><a href="/perl/print?document=https://web.archive.org/web/20070516215055id_/http%3A//www.vizrt.com/db/106/121/privacy.ehtml" target="_blank">printer-friendly&nbsp;<img src="/img/icon_printer.gif" width="13" height="10" border="0" alt=""></a>
+</script><a href="/perl/print?document=https://web.archive.org/web/20071230103422id_/http%3A//vizrt.com/db/106/121/privacy.ehtml" target="_blank">printer-friendly&nbsp;<img src="/img/icon_printer.gif" width="13" height="10" border="0" alt=""></a>
 </div>
 <div class="article_title"><!--PF HEADER START-->Privacy Statement<!--PF HEADER END--></div>
 <img src="/common/img/tpixel.gif" class="article_line" alt=""><br>
@@ -838,7 +846,7 @@ document.write('<a href="/perl/print?document=' + document.location + '" target=
 </div>
 <div class="footer">
 
-Copyright © 2006 <strong>Vizrt</strong>. All Rights Reserved. <a href="/db/106/121/legal.ehtml">Legal Notice</a> &amp; <a href="/db/106/121/privacy.ehtml">Privacy Statement</a>. <a href="mailto:webmaster@vizrt.com">webmaster@vizrt.com</a>
+Copyright © 2007 <strong>Vizrt</strong>. All Rights Reserved. <a href="/db/106/121/legal.ehtml">Legal Notice</a> &amp; <a href="/db/106/121/privacy.ehtml">Privacy Statement</a>. <a href="mailto:webmaster@vizrt.com">webmaster@vizrt.com</a>
 
 
 </div>
