--- a/d/di/din/dinehere.ca.html
+++ b/d/di/din/dinehere.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dinehere.ca privacy policy that was archived on 2007-04-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070408234524id_/http%3A//www.dinehere.ca/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dinehere.ca privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230104004id_/http%3A//www.dinehere.ca/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -152,7 +152,7 @@
 	</tr>
 	<tr>
 		<td align="center" style="padding-top:10px;">
-		<span class="footer">Server Time: 4/8/2007 4:45:27 PM - Last Statistics Update: 4/8/2007 3:01:58 AM
+		<span class="footer">Server Time: 12/30/2007 2:40:08 AM - Last Statistics Update: 12/29/2007 3:04:08 AM
 </span>
 		</td>
 	</tr>
