fedbid.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5960,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.03,
  "homepage_snapshot_redirected_domain": "fedbid.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001030650id_/http://www.fedbid.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001030650id_/http%3A//fedbid.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "fedbid.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230110456id_/http%3A//www.fedbid.com/tools/privacy",
  "policy_title": "Privacy / Policies",
  "policy_url": "fedbid.com/tools/privacy",
  "sha1": "220ecd15a17704233577cc1582a53e2775cc64b2",
  "simhash": 3729401990362497282,
  "simhash_updated": false,
  "site_hostname": "fedbid.com",
  "site_url": "http://fedbid.com",
  "smog": 14.93,
  "strict_updated": false,
  "timestamp": "20071230110456",
  "word_count": 959,
  "year": 2007
}

--- a/f/fe/fed/fedbid.com.html
+++ b/f/fe/fed/fedbid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fedbid.com privacy policy that was archived on 2007-04-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070421231624id_/http%3A//www.fedbid.com/tools/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fedbid.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230110456id_/http%3A//www.fedbid.com/tools/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 	<title>Privacy / Policies</title>
@@ -96,7 +96,7 @@
 
 <h2>Patents</h2>
 
-<p>The business process and technology implemented on the Web Site is covered by a patent pending submittal to the U.S. Patent and Trademark Office.</p>
+<p>The business method and technology implemented on the Web Site is covered by an existing patent issued by the U.S. Patent and Trademark Office.</p>
 
 <h2>Servicemarks</h2>
 
