azcarsandtrucks.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping;vehicles",
  "char_count": 4605,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.51,
  "homepage_snapshot_redirected_domain": "azcarsandtrucks.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070909000318id_/http://www.azcarsandtrucks.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070909000318id_/http%3A//azcarsandtrucks.com",
  "interval": "2007_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "azcarsandtrucks.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230124003id_/http%3A//www.azcarsandtrucks.com/priv.html",
  "policy_title": "Used Car Classifieds Privacy Policy: Your Privacy Is Important To Us: Please Review our Privacy Policy",
  "policy_url": "azcarsandtrucks.com/priv.html",
  "sha1": "8b9d61d2a58f7cc42e07b9a383c1726d99090ff6",
  "simhash": 4219386984705009253,
  "simhash_updated": false,
  "site_hostname": "azcarsandtrucks.com",
  "site_url": "http://azcarsandtrucks.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071230124003",
  "word_count": 670,
  "year": 2007
}

--- a/a/az/azc/azcarsandtrucks.com.html
+++ b/a/az/azc/azcarsandtrucks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the azcarsandtrucks.com privacy policy that was archived on 2007-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070609202731id_/http%3A//www.azcarsandtrucks.com/priv.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the azcarsandtrucks.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230124003id_/http%3A//www.azcarsandtrucks.com/priv.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Used Car Classifieds Privacy Policy:  Your Privacy Is Important To Us:  Please Review our Privacy Policy</title>
@@ -29,6 +29,18 @@ body {
 </head>
 
 <body bgcolor="#3C415F" text="#000000" link="#FFFFFF" vlink="#FFFFFF" alink="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!-- Start Quantcast tag -->
+<script type="text/javascript" src="http://quantserve.com/quant.js"></script>
+
+<script type="text/javascript">
+
+_qacct="p-78sC5mZfeD5CM";quantserve();</script>
+
+<noscript>
+
+<img src="http://quantserve.com/pixel/p-78sC5mZfeD5CM.gif" style="display: none" height="1" width="1"/></noscript>
+
+<!-- End Quantcast tag -->
 <!-- BEGIN WebSTAT Activation Code -->
 <script type="text/javascript" language="JavaScript" src="http://hv3.webstat.com/cgi-bin/wsv2.cgi?71489"></script>
 <noscript>
@@ -51,7 +63,7 @@ body {
                 </tr>
                 <tr>
                   <td>
-                    <div align="center"><font color="#FFFFFF" size="6"><i>AZCarsAndTrucks.<font color="#FF0000">com</font></i><br>
+                    <div align="center"><font color="#FFFFFF" size="6"><i>azcarsandtrucks.<font color="#FF0000">com</font></i><br>
                       <font size="3" face="Times New Roman, Times, serif"><b><font size="2"><i>"Everyone 
                       Wins With Private Party Classifieds"</i></font></b></font></font></div>
                   </td>
@@ -90,7 +102,7 @@ body {
                 <td> 
                   <div align="center"><font color="#CC0000" face="Times New Roman, Times, serif" size="4"><b><i><font color="#6b0000">PLUS</font></i></b></font><font size="4" color="#6b0000"><i><b>....</b></i></font><font color="#CC0000" face="Times New Roman, Times, serif"><i><b><font color="#000033" size="3">ALL 
                     VARIETIES OF</font></b><font color="#000033" size="3"> 'GENTLY 
-                    USED' <b>DEALS ON WHEELS!.......<font color="#6b0000" size="4">602.413.0592</font></b></font></i></font></div>
+                    USED' <b>DEALS ON WHEELS!.......<font color="#6b0000" size="4">480.888.2392</font></b></font></i></font></div>
                 </td>
               </tr>
               <tr> 
@@ -198,7 +210,7 @@ body {
                         <td width="3%">&nbsp;</td>
                         <td width="97%"><font face="Times New Roman, Times, serif" size="2" color="#FF0000"><b><strong><font face="Times New Roman, Times, serif" size="2" color="#FFFFFF"><i><a name="top1"></a></i></font><font size="2" color="#6b0000"><i>You 
                           Are Here &gt;</i></font><font size="4" color="#000000"> 
-                          </font><font face="Times New Roman, Times, serif" size="4" color="#000000"><b><font size="5">AZCarsandTrucks.com 
+                          </font><font face="Times New Roman, Times, serif" size="4" color="#000000"><b><font size="5">azcarsandtrucks.com 
                           Privacy Policy</font></b></font></strong></b></font></td>
                       </tr>
                     </tbody></table>
@@ -234,7 +246,7 @@ body {
                         <td width="50%">&nbsp;</td>
                         <td width="50%"> 
                           <div align="right"><font face="Times New Roman, Times, serif" size="2" color="#CC0000"><b><font color="#6b0000">Effective: 
-                            12/18/2004</font></b></font></div>
+                            01/01/07</font></b></font></div>
                         </td>
                       </tr>
                     </tbody></table>
