--- a/m/mo/mon/money-talk.org.html
+++ b/m/mo/mon/money-talk.org.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the money-talk.org privacy policy that was archived on 2007-02-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070202174927id_/http%3A//www.money-talk.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the money-talk.org privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230131744id_/http%3A//www.money-talk.org/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Money Talk :: Privacy Policy</title>
 <link rel="stylesheet" href="http://www.money-talk.org/credit-cards/templates/styles/default.css" type="text/css">
 <link rel="stylesheet" href="http://www.money-talk.org/credit-cards//templates/icicle/iciclex.css" type="text/css">
+<link rel="stylesheet" href="templates/icicle/icicle.css" type="text/css">
 
 
 
@@ -36,12 +37,12 @@
 
         <a href="http://www.money-talk.org/" class="fatlink" title="Money Talk">Home</a> &nbsp;
         <a href="http://www.money-talk.org/board.html" class="fatlink" title="Money Forums">Forum</a> &nbsp;
-        <a href="http://www.money-talk.org/directory/" class="fatlink" title="Financial Directory">Directory</a> &nbsp;
+        <!-- <a href="http://www.money-talk.org/directory/"    class="fatlink" title="Financial Directory">Directory</a> &nbsp; -->
         <a href="http://www.money-talk.org/network/" class="fatlink" title="Financial Banner Exchange">Exchange</a> &nbsp;
         <a href="http://www.money-talk.org/feeds/" class="fatlink" title="Financial Feeds">Feeds</a> &nbsp;
-        <a href="http://www.money-talk.org/credit-cards/" class="fatlink" title="Credit Cards">Cards</a> &nbsp;
+        <!-- <a href="http://www.money-talk.org/credit-cards/" class="fatlink" title="Credit Cards">Cards</a> &nbsp; -->
         <a href="http://www.money-talk.org/401k/401k-center.shtml" class="fatlink" title="401k Information">401k</a> &nbsp;
-        <a href="http://www.money-talk.org/forum19.html" class="fatlink" title="TSP Chat">TSP</a> &nbsp;
+        <!-- <a href="http://www.money-talk.org/forum19.html" class="fatlink" title="TSP Chat">TSP</a> &nbsp; -->
 
 
         </center>      </td></tr></tbody></table>
@@ -95,7 +96,7 @@
         </tr>
 
         <tr>
-          <td valign="middle" class="row2c">
+          <td valign="middle" class="row2">
 
 
 
