eolss.net (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2626,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.64,
  "homepage_snapshot_redirected_domain": "eolss.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070930225616id_/http://www.eolss.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070930225616id_/http%3A//eolss.net",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "eolss.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230152819id_/http%3A//www.eolss.net/eolss_policy.aspx",
  "policy_title": "Encyclopedia of Life Support Systems - Privacy Policy",
  "policy_url": "eolss.net/eolss_policy.aspx",
  "sha1": "a0a2e8a78a25593f4936269c36d594766641cf3a",
  "simhash": 11187762308703568899,
  "simhash_updated": false,
  "site_hostname": "eolss.net",
  "site_url": "http://eolss.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071230152819",
  "word_count": 423,
  "year": 2007
}

--- a/e/eo/eol/eolss.net.html
+++ b/e/eo/eol/eolss.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eolss.net privacy policy that was archived on 2007-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070630192318id_/http%3A//www.eolss.net/eolss_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eolss.net privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230152819id_/http%3A//www.eolss.net/eolss_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -301,7 +301,7 @@ Div.MainLink
 <table width="100%" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" style="border-collapse: collapse" bordercolor="#111111" height="49">
 <tbody><tr>
 <td valign="top" height="49" width="200" colspan="2">
-<img border="0" src="eolss_logo1.jpg" width="200" height="40"><font color="#ffffff" face="Verdana, Arial" size="1"><b>&nbsp;<font color="#ffffff">|</font>
+<img border="0" src="eolss_logo2.jpg" width="200" height="40"><font color="#ffffff" face="Verdana, Arial" size="1"><b>&nbsp;<font color="#ffffff">|</font>
 &nbsp;&nbsp; </b></font>
 </td>
 <td>
@@ -313,7 +313,7 @@ Div.MainLink
 </td><td>
 
 <a href="http://www.eolss.net/eolss_subindv.aspx" name="banner" onmouseover="window.status=bannerStatus;return true" onmouseout="window.status='';return true">
-<img src="banner2.gif" name="banner" border="0" width="350" height="40" alt="Order now at special Educational Prices"></a>
+<img src="banner5.gif" name="banner" border="0" width="350" height="40" alt="Order now at special Educational Prices"></a>
 </td>
 </tr>
 </tbody></table>
@@ -356,8 +356,9 @@ Div.MainLink
 
 <dt><img src="bullet_r.gif">&nbsp;Login
 </dt></div><div class="TOC">
-<dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://greenplanet.eolss.net/EolssLogn/LoginForm.aspx" target="_self">Individual Members Login</a>
+<dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://greenplanet.eolss.net/EolssLogn/LoginForm.aspx" target="_self"><font face="Verdana" color="#008000">Individual Members Login</font></a>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://greenplanet.eolss.net/EolssLogn/InsLogin.aspx" target="_self">Access for  Institutions</a>
+</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_demo.aspx" target="_self"><font face="Verdana" color="#008000">EOLSS Demo</font></a>
 </dt></div><div class="H1TOC">
 
 <hr size="1" noshade="">
@@ -389,6 +390,8 @@ Div.MainLink
 
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_FAQ.aspx">FAQ</a>
 
+</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/ebooks/reg_samplechapters.aspx"><font color="green">Sample Chapters</font></a>
+
 </dt></div><div class="TOC">
 <hr size="1" noshade="">
 
@@ -412,10 +415,10 @@ Div.MainLink
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_french.aspx">French</a>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_german.aspx">German</a>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_italian.aspx">Italian</a>
-</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<font color="gray" face="Verdana" size="1">Japanese</font>
+</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_japanese.aspx">Japanese</a>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_korean.aspx">Korean</a>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_port.aspx">Portuguese</a>
-</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<font color="gray" face="Verdana" size="1">Rusian</font>
+</dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<font color="gray" face="Verdana" size="1">Russian</font>
 </dt><dt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="redball.gif" height="5" width="5">&nbsp;<a href="http://www.eolss.net/eolss_journrep_span.aspx">Spanish</a>
 </dt></div><div class="H1TOC">
 
