--- a/a/ac/ach/achooallergy.com.html
+++ b/a/ac/ach/achooallergy.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the achooallergy.com privacy policy that was archived on 2007-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070607152625id_/http%3A//www.achooallergy.com/privacy-policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the achooallergy.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230161459id_/http%3A//www.achooallergy.com/privacy-policy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
 <title>achoo! ALLERGY &amp; Air Products Privacy Policy</title><meta name="keywords" content="achoo allergy and air products, achoo, privacy"><meta name="description" content="achoo! ALLERGY &amp; Air Products Privacy Policy"><script src="/__utm.js" type="text/javascript"> </script><script src="/__utm6.js" type="text/javascript"> </script><script language="JavaScript" src="http://www.trustlogo.com/trustlogo/javascript/trustlogo.js" type="text/javascript"></script><link rel="stylesheet" href="includes/globalV3.css" type="text/css"></head>
+
 
 
 
@@ -25,48 +26,43 @@
 		<td>
 		<table border="0" cellpadding="0" cellspacing="0" width="750">
 		<tbody><tr>
-			<td width="230" rowspan="5">
+			<td width="230" rowspan="4">
 			<a href="http://www.achooallergy.com">
-			<img border="0" src="images/hv4-achoo-allergy.jpg" width="230" height="100" alt="Allergy Relief Products"></a></td>
-			<td height="36" colspan="2">
+			<img border="0" src="images/hv4-achoo-allergy-winter.jpg" width="230" height="100" alt="Allergy Relief Products"></a></td>
+			<td height="36">
 			<a href="http://www.achooallergy.com/help.asp">
 			<img border="0" src="images/order_anytime.gif"></a><a href="http://www.achooallergy.com/cart.asp"><img border="0" src="images/hv4_cart.jpg" width="94" height="36"></a><a href="http://www.achooallergy.com/account.asp"><img border="0" src="images/hv4_account.jpg" width="94" height="36"></a><a href="http://www.achooallergy.com/help.asp"><img border="0" src="images/hv4_help.jpg" width="57" height="36"></a></td>
 		</tr>
 		<tr>
-			<td height="10" colspan="2">
-			<img border="0" src="images/search_allergy_products.jpg" width="520" height="10"></td>
-		</tr>
-		<tr>
-			<td height="30" width="520">
+			<td height="40">
 				<table width="520" cellpadding="0" cellspacing="0">
-					<form action="search.asp" method="post"></form>
+					<form name="fbsearch" method="get" action="http://search.achooallergy.com/b/q?&amp;sn=158284470"></form>
 						<tbody><tr>
-							<td width="320" bgcolor="#FFFFFF">&nbsp;</td>
-							<td width="174" style="background-image:url('images/bg_search.jpg'); background-repeat: no-repeat">
-							<img src="images/nothing.gif" width="3" height="1">
-							<input maxlength="50" type="text" name="search" size="25" onblur="if (this.value=='') this.value='Air Purifiers, Allergy Bedding'" value="Air Purifiers, Allergy Bedding" onclick="this.value=''" onactivate="if (this.value=='Air Purifiers, Allergy Bedding') this.value='';" style="border:0px solid #FFFFFF; position: relative; height: 17; font-family: Arial; font-size: 8pt; padding-left:6px; padding-right:4px; vertical-align:text-top;"></td>
-							<td width="26">
-							<input type="image" src="images/btnGo.jpg" name="search" width="26" height="30"></td>
+							<td width="60" bgcolor="#FFFFFF">&nbsp;</td>
+							<td width="174" style="background-image:url('images/bg_search.jpg'); background-repeat: no-repeat;">
+							<img src="images/nothing.gif" width="1">
+							<input type="hidden" name="sitenbr" value="158284470"><input align="right" maxlength="50" type="text" name="keys" size="25" onblur="if (this.value=='') this.value=''" value="" onclick="this.value=''" onactivate="if (this.value=='Air Purifiers, Allergy Bedding') this.value='';" style="border:0px solid #FFFFFF; position: relative; height: 17; font-family: Arial; font-size: 8pt; padding-left:6px; padding-right:4px; vertical-align:text-top;"></td>
+							<td width="286"><input type="image" src="images/btn_search.jpg" name="search" width="75" height="30"></td>
 						</tr>
 					
-				</tbody></table>	
+				</tbody></table>
 			</td>
 		</tr>
 		<tr>
-			<td height="16" colspan="2" bgcolor="#FFFFFF">
+			<td height="16" bgcolor="#FFFFFF">
 			<img align="absbottom" src="images/icon_achoo.jpg" alt="About achoo! ALLERGY" width="18" height="16"><a class="topnav3" href="http://www.achooallergy.com/aboutus.asp">About Us</a><img align="absbottom" src="images/icon_chk.jpg" alt="Why Shop with achoo! ALLERGY" width="18" height="16"><a class="topnav3" href="http://www.achooallergy.com/shop-achoo.asp">Why Shop achoo!</a><img align="absbottom" src="images/icon_truck.jpg" alt="Free Shipping on Allergy Relief Products" width="18" height="16"><a class="topnav3" href="http://www.achooallergy.com/shipping-info.asp">Free Shipping on Orders Over $150</a>&nbsp;</td>
 		</tr>
 		<tr>
-			<td height="8" colspan="2">
+			<td height="8">
 			<img border="0" src="images/hv4-r4.jpg" width="520" height="8"></td>
 		</tr>
 		<tr>
-			<td height="20" align="right" colspan="3" style="background-image:url('images/hv4-bg-topnav.jpg'); background-repeat: no-repeat; background-position-x:left;">
+			<td height="20" align="right" colspan="2" style="background-image:url('images/hv4-bg-topnav.jpg'); background-repeat: no-repeat; background-position-x:left;">
 			<a class="topnav2" href="http://www.achooallergy.com/bedding.asp">Allergy Bedding</a>&nbsp;|&nbsp;<a class="topnav2" href="http://www.achooallergy.com/airpurifiers.asp">Air Purifiers</a>&nbsp;|&nbsp;<a class="topnav2" href="http://www.achooallergy.com/mattresses.asp">Mattresses</a>&nbsp;|&nbsp;<a class="topnav2" href="http://www.achooallergy.com/vacuumcleaners.asp">Vacuum Cleaners</a>&nbsp;|&nbsp;<a class="topnav2" href="http://www.achooallergy.com/humiditycontrol.asp">Humidity &amp; Mold</a>&nbsp;|&nbsp;<a class="topnav2" href="http://www.achooallergy.com/sinusirrigation.asp">Sinus Relief</a>&nbsp;</td>
 		</tr>
 		<form></form>
 		<tr>
-			<td height="24" align="right" colspan="3" style="background-image:url('images/hv4-fsf.jpg'); background-repeat: no-repeat">
+			<td height="24" align="right" colspan="2" style="background-image:url('images/hv4-fsf.jpg'); background-repeat: no-repeat">
 			<select name="solutions" size="1" onchange="location=this.options[this.selectedIndex].value;" style="font-family: Arial; font-size: 8pt; width: 182px;">
 				<option value="http://www.achooallergy.com">Select One</option>
 				<option value="http://www.achooallergy.com/dust-mites.asp">Dust Mites</option>
@@ -214,7 +210,7 @@
 				<td><br><a class="lnavmain2" href="http://www.achooallergy.com/allergy-relief-learning-center.asp">Allergy Relief Learning Center</a></td>
 			</tr>
 			<tr>
-				<td><br><a class="lnavmain2" href="http://www.achooallergy.com/allergyrelief.asp">Allergy Products</a></td>
+				<td><br><a class="lnavmain2" href="http://www.achooallergy.com/allergyrelief.asp">Allergy Relief</a></td>
 			</tr>
 				<tr><td><a class="lnavmain" href="http://www.achooallergy.com/bedding.asp">Allergy Bedding</a></td></tr>
 					
@@ -292,7 +288,6 @@
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/hypodown-buying-guide.asp">Hypodown Comforter Buying Guide</a></td>
 	</tr>
-
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/air-purifier-buying-guide.asp">Air Purifier Buying Guide</a></td>
 	</tr>
@@ -302,14 +297,21 @@
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/miele-vacuum-buying-guide.asp">Miele Vacuum Cleaner Buying Guide</a></td>
 	</tr>
-
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/dehumidifier-buying-guide.asp">Dehumidifier Buying Guide</a></td>
 	</tr>
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/humidifier-buying-guide.asp">Humidifier Buying Guide</a></td>
 	</tr>
-
+	<tr>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/allergy-asthma-mask-buying-guide.asp">Mask Buying Guide</a></td>
+	</tr>
+	<tr>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/tempur-pedic-buying-guide.asp">Tempur-Pedic Buying Guide</a></td>
+	</tr>
+	<tr>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/royal-pedic-buying-guide.asp">Royal-Pedic Buying Guide</a></td>
+	</tr>
 
 	<tr>
 		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/compare-allergy-products.asp">Comparison Charts</a></td>
@@ -346,6 +348,9 @@
 		<td><a class="lnavmain" href="http://www.achooallergy.com/miele-shopping-assistant.asp">Miele Vacuum Shopping Assistant</a></td>
 	</tr>
 	<tr>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/sleep-analyzer.asp">Sleep Analyzer</a></td>
+	</tr>
+	<tr>
 		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/allergy-relief-products-brands.asp">Shop by Brand</a></td>
 	</tr>
 	<tr>
@@ -355,10 +360,10 @@
 		<td><a class="lnavmain" href="http://www.achooallergy.com/miele.asp">Miele</a></td>
 	</tr>
 	<tr>
-		<td><a class="lnavmain" href="http://www.achooallergy.com/primaloftcomforter.asp">Primaloft</a></td>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/austin-air.asp">Austin Air</a></td>
 	</tr>
 	<tr>
-		<td><a class="lnavmain" href="http://www.achooallergy.com/dyson.asp">Dyson</a></td>
+		<td><a class="lnavmain" href="http://www.achooallergy.com/iqairpurifiers.asp">IQAir</a></td>
 	</tr>
 	<tr>
 		<td><a class="lnavmain" href="http://www.achooallergy.com/allergy-relief-products-brands.asp">See All Brands</a></td>
@@ -368,10 +373,13 @@
 		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/allergy-consumer-report.asp">Newsletter</a></td>
 	</tr>
 	<tr>
-		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/blog">Blog</a></td>
+		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/blog">Allergy Blog</a></td>
 	</tr>
 	<tr>
 		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/physician-support-services.asp">Physician Support Services</a></td>
+	</tr>
+	<tr>
+		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/customer-reviews.asp">Allergy Relief Product Reviews</a></td>
 	</tr>
 	<tr>
 		<td><br><a class="lnavmain2" href="http://www.achooallergy.com/clearance.asp">Clearance Items</a></td>
@@ -392,8 +400,8 @@
 	</tr>	
 	<tr>
 		<td bgcolor="#FFFFFF" valign="top">
-			<a href="http://www.achooallergy.com/austinpetmachine.asp">
-			<img src="http://www.achooallergy.com/images/navbottom2.gif" border="0" width="120" height="22"></a></td>
+			<a href="http://www.achooallergy.com/humidifiers.asp">
+			<img src="http://www.achooallergy.com/images/navbottom2.gif" border="0" width="120" height="22" alt="Humidifiers"></a></td>
 	</tr>
 </tbody></table>
 </td>
@@ -433,13 +441,15 @@
 								<font color="#296490">Contact Us</font></b><br>
 								<a class="bottomNav" href="http://www.achooallergy.com/help.asp">
 								<span style="text-decoration: none">1-800-339-7123</span></a><br>
-								<a class="bottomNav" href="mailto:info@achooallergy.com">Email Us</a><br>
+								<a class="bottomNav" href="http://www.achooallergy.com/contact.asp">Email Us</a><br>
 								<a class="bottomNav" href="http://www.achooallergy.com/aboutus.asp">About Us</a><br>
 								<a class="bottomNav" href="http://www.achooallergy.com/company.asp">Company Info</a><br>
-								<a class="bottomNav" href="http://www.achooallergy.com/career-opportunities.asp">Career Opportunities</a><br>
 								<a class="bottomNav" href="http://www.achooallergy.com/achoo-atlanta.asp">Atlanta Showroom</a><br>
 								<a class="bottomNav" href="http://www.achooallergy.com/press.asp">achoo! in the Press</a><br>
-								<a class="bottomNav" href="http://www.achooallergy.com/mediakit/">Media Kit</a>
+								<a class="bottomNav" href="http://www.achooallergy.com/mediakit/">Media Kit</a><br>
+								<a class="bottomNav" href="http://www.achooallergy.com/affiliates.asp">Affiliate Program</a><br>
+								<a class="bottomNav" href="http://www.achooallergy.com/career-opportunities.asp">Career Opportunities</a>
+
 							</td>
 							<td width="116" valign="top">
 								<p align="right"><b><font color="#296490">Account Info</font></b><br>
@@ -515,12 +525,6 @@
 		</td>
 	</tr>
 </tbody></table>	
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-899586-1";
-urchinTracker();
-</script>	
 
 
 		
