--- a/m/ma/man/mantisbt.org.html
+++ b/m/ma/man/mantisbt.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mantisbt.org privacy policy that was archived on 2007-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070628160348id_/http%3A//www.mantisbt.org/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mantisbt.org privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230163757id_/http%3A//mantisbt.org/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <link rel="shortcut icon" href="http://www.mantisbt.org/fav.ico">
@@ -97,17 +97,18 @@ input.small		{ font-size: 8pt; font-family: verdana,arial,helvetica,sans-serif; 
 <td align="center">
 <div align="center" style="background-color:#FFFFCC; top:0px; position: absolute; left:0px; width: 100%; height: 20px; font-size:12px; padding-top:3px; border-bottom: 2px solid #bebebe;">
 <big>.:
-<a href="http://www.futureware.biz/mantisconnect/">MantisConnect</a> |
-<a href="http://www.futureware.biz/mantiswap/">MantisWAP</a> |
-<a href="hosting.php">Hosting</a> |
-<a href="http://www.futureware.biz/mantisdemo">Demo</a> |
-<a href="sponsors.php">Sponsors</a> |
-<a href="directory.php">Users</a> |
-<a href="testimonials.php">Testimonials</a> |
+<a href="http://www.mantisbt.org/blog/">Blog</a> |
 <a href="/manual/">Manual</a> |
 <a href="/forums/">Forums</a> |
 <a href="/wiki/">Wiki</a> |
 <a href="/bugs/">Bug Tracker</a> |
+<a href="http://www.futureware.biz/mantisdemo">Demo</a> |
+<a href="http://www.futureware.biz/mantisconnect/">MantisConnect</a> |
+<a href="http://www.futureware.biz/mantiswap/">MantisWAP</a> |
+<a href="hosting.php">Hosting</a> |
+<a href="sponsors.php">Sponsors</a> |
+<a href="directory.php">Users</a> |
+<a href="testimonials.php">Testimonials</a> |
 <a href="consulting.php">Consulting</a>
 :.</big>
 
@@ -205,25 +206,19 @@ google_color_url = "4080D0";
 		</tr>
 		<tr>
 			<td class="menu_head">
-				<span class="big">Partner Links</span><br>
 			</td>
 		</tr>
 		<tr>
 			<td class="menu_items">
 				
-<ul style="margin: 0; overflow: hidden; border: 1px solid #FFFFFF; border-spacing: 0px; background-color: #FFFFFF; padding: 0; width: 100%; list-style: none;">
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.sjdiscounttools.com">Sunex Products</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.sortprice.com">Compare Prices</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.customermagnetism.com">search engine marketing</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.gralon.net">annuaire internet</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.myspacemaster.net">myspace layouts</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.viatalk.com">Internet Phone Service</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.siteground.com/">Web Hosting</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;">  <a style="color: #000000; font-size: 12px;" href="http://www.352media.com">web design company</a>  </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;"> <a style="color: #000000; font-size: 12px;" href="http://www.welt-der-links.de/">Webmaster Internet</a> </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;"> <a style="color: #000000; font-size: 12px;" href="http://www.easyrecovery.co.uk/">Data Recovery</a> </span></li>
-<li style="width: 100%; clear: none; margin: 0; float: left; display: inline; padding: 0;"><span style="display: block; font-size: 12px; margin: 0; padding: 3px; width: 100%; color: #000000;"> <a style="color: #000000; font-size: 12px;" href="http://www.callfire.com/dialer/cm/info/voice_broadcast.html">Voice Broadcast</a> </span></li>
-</ul>			</td>
+
+  <a href="http://www.sortprice.com">Compare Prices</a>  <br>
+  <a href="http://www.customermagnetism.com">search engine marketing</a>  <br>
+  <a href="http://www.352media.com">web design company</a>  <br>
+ <a href="http://www.welt-der-links.de/">Webmaster Internet</a> <br>
+ <a href="http://www.easyrecovery.co.uk/">Data Recovery</a> <br>
+ <a href="http://www.leclic.co.uk/">wedding photography</a> <br>
+			</td>
 		</tr>
 		<tr>
 			<td class="menu_head">
@@ -361,6 +356,29 @@ google_color_url = "4080D0";
 <p>If you have any questions about this privacy policy or our treatment of your personal data, please write to us by email to vboctor at users dot sourceforge dot net.</p>
 
 <p align="center"><small>This privacy policy is based on a freely-available template created and distributed by <a href="http://www.website-law.co.uk" target="_blank" rel="nofollow">http://www.website-law.co.uk</a>.</small></p>
+</td>
+<td style="padding: 4px;">
+
+<!-- Google Adsense -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-0025921896787428";
+google_alternate_color = "FFFFFF";
+google_ad_width = 160;
+google_ad_height = 600;
+google_ad_format = "160x600_as";
+google_ad_type = "text_image";
+//2007-07-07: mantisbugtracker.com
+google_ad_channel = "9322764039";
+google_color_border = "B8B8FF";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "4080D0";
+google_ui_features = "rc:6";
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 
 	</td>
 </tr>
