--- a/c/ca/cam/cammodels.com.html
+++ b/c/ca/cam/cammodels.com.html
@@ -1,13 +1,17 @@
-<!--The following is the downloaded HTML source of the cammodels.com privacy policy that was archived on 2006-08-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060826011242id_/http%3A//cammodels.com/docs.php%3Fdoc%3Dprivacy%26) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cammodels.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230172935id_/http%3A//cammodels.com/docs.php%3Fdoc%3Dprivacy%26) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="MSSmartTagsPreventParsing" content="TRUE">
+<meta name="description" content="Free Live Video Chat - CamModels">
+<meta name="keywords" content="CamModels, free, live, chat, cams, cam, webcam, private, videos, picture, sex, straight, gay, asian, shemale, latina, bdsm, tranny">
+
+
 <title>CamModels - Privacy Policy</title>
 <link rel="stylesheet" type="text/css" href="http://static.gfx.cammodels.com/skin/cm/style.css">
 </head>
 
-<body bgcolor="#FFFFFF" marginheight="0" topmargin="0" background="http://static.gfx.cammodels.com/skin/cm/images/background.jpg">
+<body marginheight="0" topmargin="0">
 
 <center>
 <table border="0" cellspacing="0" cellpadding="0" width="720" class="mainside" bgcolor="#FFFFFF">
@@ -41,6 +45,7 @@
 
 </tbody></table>
 
+
 		</td>
 	</tr>
 </tbody></table>
@@ -56,7 +61,7 @@
 <script language="JavaScript"><!--		
 function formatDate()
 {
-  var gmh = 25;
+  var gmh = 17;
   // formats like: Tue, Aug 26, 9:01 AM
   var wd = Array( "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat" );
   var mo = Array( "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" );
@@ -89,7 +94,7 @@ document.write( formatDate() );
 		<td valign="top" align="left">
 
 <!-- start left content -->
-		
+
 <!-- ** search table ** -->
 <form name="searchform" action="/search.php" onsubmit="return submitSearch()" method="GET">
 
@@ -162,51 +167,51 @@ function selectBrowse( opt )
   }
   else
   {
-    location = "/search.php?exact=1&keys=" + escape(opt.value) + "&";
+    location = "/search.php?exact=1&keys=" + opt.value + "&";
   }
 }
 </script>
 <select style="width:140px" name="catbrowser" onchange="selectBrowse( this.options[ this.selectedIndex ] )">
 <option selected="" value="nada">browse models
 </option><option value="nada0">Girl Cams --</option>
-<option value="0:504;8:-22">&nbsp;&nbsp;Teen</option>
-<option value="0:504;10:511">&nbsp;&nbsp;Blonde</option>
-<option value="0:504;10:513,514">&nbsp;&nbsp;Brunette</option>
-<option value="0:504;10:512">&nbsp;&nbsp;Redhead</option>
-<option value="0:504;15:588">&nbsp;&nbsp;Asian</option>
-<option value="0:504;15:586">&nbsp;&nbsp;Ebony</option>
-<option value="0:504;15:587">&nbsp;&nbsp;Latina</option>
-<option value="0:504;1:708">&nbsp;&nbsp;Housewives</option>
-<option value="0:504;13:562">&nbsp;&nbsp;Anal</option>
+<option value="0%3A504%3B8%3A-22&amp;title=Teen+Girl+Cams">&nbsp;&nbsp;Teen</option>
+<option value="0%3A504%3B10%3A511&amp;title=Blonde+Girl+Cams">&nbsp;&nbsp;Blonde</option>
+<option value="0%3A504%3B10%3A513%2C514&amp;title=Brunette+Girl+Cams">&nbsp;&nbsp;Brunette</option>
+<option value="0%3A504%3B10%3A512&amp;title=Redhead+Girl+Cams">&nbsp;&nbsp;Redhead</option>
+<option value="0%3A504%3B15%3A588&amp;title=Asian+Girl+Cams">&nbsp;&nbsp;Asian</option>
+<option value="0%3A504%3B15%3A586&amp;title=Ebony+Girl+Cams">&nbsp;&nbsp;Ebony</option>
+<option value="0%3A504%3B15%3A587&amp;title=Latina+Girl+Cams">&nbsp;&nbsp;Latina</option>
+<option value="0%3A504%3B1%3A708&amp;title=Housewives+Girl+Cams">&nbsp;&nbsp;Housewives</option>
+<option value="0%3A504%3B13%3A562&amp;title=Anal+Girl+Cams">&nbsp;&nbsp;Anal</option>
 <option value="nada1">Friends (no Adult Content) --</option>
-<option value="0:504;1:800">&nbsp;&nbsp;Gals</option>
-<option value="0:503;1:800">&nbsp;&nbsp;Guys</option>
+<option value="0%3A504%3B1%3A800&amp;title=Gals+Friends+%28no+Adult+Content%29">&nbsp;&nbsp;Gals</option>
+<option value="0%3A503%3B1%3A800&amp;title=Guys+Friends+%28no+Adult+Content%29">&nbsp;&nbsp;Guys</option>
 <option value="nada2">Couple Cams --</option>
-<option value="0:802">&nbsp;&nbsp;Lesbian</option>
-<option value="0:801">&nbsp;&nbsp;Gay</option>
-<option value="0:803">&nbsp;&nbsp;Straight</option>
-<option value="0:804">&nbsp;&nbsp;Group Sex</option>
+<option value="0%3A802&amp;title=Lesbian+Couple+Cams">&nbsp;&nbsp;Lesbian</option>
+<option value="0%3A801&amp;title=Gay+Couple+Cams">&nbsp;&nbsp;Gay</option>
+<option value="0%3A803&amp;title=Straight+Couple+Cams">&nbsp;&nbsp;Straight</option>
+<option value="0%3A804&amp;title=Group+Sex+Couple+Cams">&nbsp;&nbsp;Group Sex</option>
 <option value="nada3">Guy Cams --</option>
-<option value="0:503;16:507">&nbsp;&nbsp;Straight</option>
-<option value="0:503;16:509">&nbsp;&nbsp;Bi</option>
-<option value="0:503;16:508">&nbsp;&nbsp;Gay</option>
-<option value="0:503;8:-23">&nbsp;&nbsp;College</option>
-<option value="0:503;1:706;18:613,614;12:536,537">&nbsp;&nbsp;Bear</option>
-<option value="0:503;12:533,535">&nbsp;&nbsp;Muscle</option>
-<option value="0:503;13:562">&nbsp;&nbsp;Anal</option>
+<option value="0%3A503%3B16%3A507&amp;title=Straight+Guy+Cams">&nbsp;&nbsp;Straight</option>
+<option value="0%3A503%3B16%3A509&amp;title=Bi+Guy+Cams">&nbsp;&nbsp;Bi</option>
+<option value="0%3A503%3B16%3A508&amp;title=Gay+Guy+Cams">&nbsp;&nbsp;Gay</option>
+<option value="0%3A503%3B8%3A-23&amp;title=College+Guy+Cams">&nbsp;&nbsp;College</option>
+<option value="0%3A503%3B1%3A706%3B18%3A613%2C614%3B12%3A536%2C537&amp;title=Bear+Guy+Cams">&nbsp;&nbsp;Bear</option>
+<option value="0%3A503%3B12%3A533%2C535&amp;title=Muscle+Guy+Cams">&nbsp;&nbsp;Muscle</option>
+<option value="0%3A503%3B13%3A562&amp;title=Anal+Guy+Cams">&nbsp;&nbsp;Anal</option>
 <option value="nada4">Specialty Cams --</option>
-<option value="0:504;8:44-">&nbsp;&nbsp;Mature Women</option>
-<option value="0:504;12:530">&nbsp;&nbsp;BBW</option>
-<option value="0:805">&nbsp;&nbsp;Shemale</option>
-<option value="0:505,506">&nbsp;&nbsp;Tranny</option>
-<option value="0:504;20:628,629,630,631,632,633,634">&nbsp;&nbsp;Big Breasts</option>
-<option value="13:550">&nbsp;&nbsp;BDSM</option>
-<option value="0:504;13:555">&nbsp;&nbsp;Pregnant</option>
-<option value="13:551,552">&nbsp;&nbsp;Leather/rubber</option>
-<option value="13:560">&nbsp;&nbsp;Smoking/cigars</option>
-<option value="13:558">&nbsp;&nbsp;Toys</option>
-<option value="13:553">&nbsp;&nbsp;Feet</option>
-<option value="13:554,556,557,559,561,563,564,565">&nbsp;&nbsp;Other Fetish</option>
+<option value="0%3A504%3B8%3A44-&amp;title=Mature+Women+Specialty+Cams">&nbsp;&nbsp;Mature Women</option>
+<option value="0%3A504%3B12%3A530&amp;title=BBW+Specialty+Cams">&nbsp;&nbsp;BBW</option>
+<option value="0%3A805&amp;title=Shemale+Specialty+Cams">&nbsp;&nbsp;Shemale</option>
+<option value="0%3A505%2C506&amp;title=Tranny+Specialty+Cams">&nbsp;&nbsp;Tranny</option>
+<option value="0%3A504%3B20%3A628%2C629%2C630%2C631%2C632%2C633%2C634&amp;title=Big+Breasts+Specialty+Cams">&nbsp;&nbsp;Big Breasts</option>
+<option value="13%3A550&amp;title=BDSM+Specialty+Cams">&nbsp;&nbsp;BDSM</option>
+<option value="0%3A504%3B13%3A555&amp;title=Pregnant+Specialty+Cams">&nbsp;&nbsp;Pregnant</option>
+<option value="13%3A551%2C552&amp;title=Leather%2Frubber+Specialty+Cams">&nbsp;&nbsp;Leather/rubber</option>
+<option value="13%3A560&amp;title=Smoking%2Fcigars+Specialty+Cams">&nbsp;&nbsp;Smoking/cigars</option>
+<option value="13%3A558&amp;title=Toys+Specialty+Cams">&nbsp;&nbsp;Toys</option>
+<option value="13%3A553&amp;title=Feet+Specialty+Cams">&nbsp;&nbsp;Feet</option>
+<option value="13%3A554%2C556%2C557%2C559%2C561%2C563%2C564%2C565&amp;title=Other+Fetish+Specialty+Cams">&nbsp;&nbsp;Other Fetish</option>
 </select>
 </form>
 <!-- /center -->
@@ -259,13 +264,13 @@ function selectBrowse( opt )
 <!-- end left content -->
 
 		</td>
-		
+
 		<td valign="top" align="center">
-		
+
 <!-- start centre content -->
 
 <!-- ** actual table ** -->
-<center>		
+<center>
 <table border="0" cellspacing="0" cellpadding="0" width="554">
 	<tbody><tr>
 		<td class="tabhead"><img src="http://static.gfx.cammodels.com/skin/cm/images/tab-left.gif" width="10" height="25" border="0"></td>
@@ -277,7 +282,7 @@ function selectBrowse( opt )
 	<tbody><tr>
 		<td class="tabheaddark">
 
-<!-- start content -->		
+<!-- start content -->
 
 <table border="0" cellspacing="0" cellpadding="3" width="100%">
 
@@ -448,13 +453,13 @@ P.O. Box 57528<br>
 	</tr>
 </tbody></table>
 </center>
-<!-- ** end actual table ** -->	
+<!-- ** end actual table ** -->
 
-		
-<!-- end centre content -->		
-		
+
+<!-- end centre content -->
+
 		</td>
-		
+
 	</tr>
 
 <!-- start end -->
@@ -476,7 +481,7 @@ P.O. Box 57528<br>
 
 		<br>
 
-<font class="footer">© 2003-2005 CamModels Limited. All rights reserved.</font><br><br>
+<font class="footer">© 2003-2007 CamModels Limited. All rights reserved.</font><br><br>
 
 		</td>
 
