--- a/c/cl/cla/classicalarchives.com.html
+++ b/c/cl/cla/classicalarchives.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the classicalarchives.com privacy policy that was archived on 2007-04-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070409012410id_/http%3A//www.classicalarchives.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the classicalarchives.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230192051id_/http%3A//www.classicalarchives.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -28,31 +28,31 @@
 <div id="ur_rs" style="display: none; position: absolute; width:100px; top: 1; right: 1; z-index: 3;" align="right">
 	<a href="https://secure.classicalarchives.com/renew.html"><img name="h_renew" src="/gif/home_renew.gif" width="100" height="71" border="0" alt="Click to Renew your Subscription"></a><br>
 	
-	<a href="http://www.classicalarchives.com/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
+	<a href="/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
 	
 </div>
 <div id="ur_pi" style="display: none; position: absolute; width:70px; top: 1; right: 1; z-index: 3;" align="right">
 	<a href="https://secure.classicalarchives.com/"><img name="h_logout" src="/gif/home_logout.gif" width="70" height="44" border="0" alt="You are logged-in"></a><br>
 	
-	<a href="http://www.classicalarchives.com/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
+	<a href="/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
 	
 </div>
 <div id="ur_fi" style="display: none; position: absolute; width:100px; top: 1; right: 1; z-index: 3;" align="right">
 	<a href="https://secure.classicalarchives.com/subscribe.html?urad"><img name="h_convert" src="/gif/home_convert.gif" width="100" height="71" border="0" alt="Click to Convert to a Subscription"></a><br>
 	
-	<a href="http://www.classicalarchives.com/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
+	<a href="/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
 	
 </div>
 <div id="ur_p" style="display: none; position: absolute; width:70px; top: 1; right: 1; z-index: 3;" align="right">
 	<a href="https://secure.classicalarchives.com/login.html"><img name="h_login" src="/gif/home_login.gif" width="70" height="44" border="0" alt="Click to login"></a><br>
 	
-	<a href="http://www.classicalarchives.com/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
+	<a href="/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
 	
 </div>
 <div id="ur_o" style="display: none; position: absolute; width:100px; top: 1; right: 1; z-index: 3;" align="right">
 	<a href="https://secure.classicalarchives.com/subscribe.html?urad"><img name="h_subscribe" src="/gif/home_subscribe.gif" width="100" height="71" border="0" alt="Click to Subscribe"></a><br>
 	
-	<a href="http://www.classicalarchives.com/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
+	<a href="/tour.html"><img src="/gif/ticket_tour_ani.gif" width="70" height="204" border="0" alt="Music History Tour Concerts" vspace="2"></a>
 	
 </div>
 <script language="Javascript1.2">
@@ -497,6 +497,8 @@ if (cma_m.rs) {
 	<tr>
 		<td colspan="2" align="CENTER">
 			<font size="-1"><a href="http://toolbar.google.com/buttons/add?url=http://www.classicalarchives.com/classicalarchives_button.xml">Click to add the <img align="ABSMIDDLE" width="16" height="16" border="0" src="/favicon.ico"> button to your <b>Google Toolbar</b>.</a></font>
+			<br>
+			<font size="-1"><a href="http://del.icio.us/post?url=http://www.classicalarchives.com/&amp;title=Classical Music Archives&amp;notes=The largest classical music site ont the web with 40,055 full length classical music files by 2,093 composers.">Click to add the site to your <img align="ABSMIDDLE" width="14" height="14" border="0" src="/gif/delicious.gif"> <b>del.icio.us list</b>.</a></font>
 		</td>
 	</tr>
 	<tr>
