inventnow.org (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 5821,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.28,
  "homepage_snapshot_redirected_domain": "inventnow.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070928224229id_/http://www.inventnow.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070928224229id_/http%3A//inventnow.org",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "inventnow.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230204923id_/http%3A//www.inventnow.org/privacy_policy",
  "policy_title": "InventNow.org - Privacy Policy",
  "policy_url": "inventnow.org/privacy_policy",
  "sha1": "da9f48a79ed566035503e453ff501f35651ba695",
  "simhash": 9213826211650381440,
  "simhash_updated": false,
  "site_hostname": "inventnow.org",
  "site_url": "http://inventnow.org",
  "smog": 13.45,
  "strict_updated": true,
  "timestamp": "20071230204923",
  "word_count": 982,
  "year": 2007
}

--- a/i/in/inv/inventnow.org.html
+++ b/i/in/inv/inventnow.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inventnow.org privacy policy that was archived on 2007-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070506053050id_/http%3A//inventnow.org/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inventnow.org privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230204923id_/http%3A//www.inventnow.org/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html><head>
 	<title>InventNow.org - Privacy Policy</title>
@@ -12,14 +12,22 @@
 	<script language="javascript" src="/js/e1/t1/swfobject.js"></script>
 	<script language="javascript" src="/js/e1/t1/sifr.js"></script>
 
+	<!-- Begin: Google analytics //-->
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script> 
+	<script type="text/javascript"> 
+		_uacct = "UA-1824341-1"; 
+		urchinTracker(); 
+	</script>
+	<!-- End: Google analytics //-->
+
 	<link rel="shortcut icon" href="/images/e1/t1/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/images/e1/t1/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body onload="ClientResolution();" onunload="TimeSpent('unload');">
 	<div id="MainContainer">
 		<div id="Header">
 			<div class="Logo">
-				<a href="/"><img src="/images/e1/t1/logo.gif" border="0"></a>
+				<a href="/"><img src="/images/e1/t1/logo.gif" border="0" alt="InventNow.org"></a>
 			</div>
 			<div id="UserBar">
 				<form action="/" method="POST">
@@ -30,11 +38,21 @@
 					<input type="text" name="Username" value="">
 					<img src="/images/e1/t1/lbl.password.gif" alt="Password">
 					<input type="password" name="Pass">
-					<input type="image" src="/images/e1/t1/btn.go.red.gif" value="Log In">
+					<input type="image" src="/images/e1/t1/btn.go.red.gif" value="Go">
 				</form>
-				not a member? <a href="/register/">click here</a> to register
+				Not a member? <a href="/register/">click here</a> to register.
+				<a href="/password_recovery/">I forgot my password</a>.
 			</div>
-			<div id="Nav"></div>
+			<div id="Nav">
+				<ul>
+					<li><a href="/">My World</a></li>
+					<li><a href="/invent/">Invent Now</a></li>
+					<li><a href="/announcements/">What's New</a></li>
+					<li><a href="/message_board/">Message Board</a></li>
+					<li><a href="/tell_a_friend/">Tell A Friend</a></li>
+					<li><a href="/submit/">Share Something</a></li>
+				</ul>
+			</div>
 			<script>
 				var swf = {};
 				swf.Nav = new SWFObject(
@@ -43,28 +61,12 @@
 					'866',		// Width
 					'38',		// Height
 					'8.0.0.0',	// Version
-					'#FFFFFF',	// Background Color
-					true,		// Use Express
-					true		// Do Express
+					'#CFDDEA'
 				);
 				swf.Nav.addVariable( 'Page', 'privacy_policy' );
 				swf.Nav.addParam( 'wmode', 'transparent' );
 				swf.Nav.write( 'Nav' );
 			</script>
-<!--
-			<div>
-				<a href="/events/">Find An Event</a>
-			</div>
-			<div>
-				Zones: 
-				<a href="/design/">Design</a> |
-				<a href="/entertainment/">Entertainment</a> |
-				<a href="/investigation/">Investigation</a> |
-				<a href="/space/">Space</a> |
-				<a href="/sports/">Sports</a> |
-				<a href="/inventors_plant/">Inventor's Plant</a>
-			</div>
--->
 		</div>
 		<div id="Content">
 			<div class="ContentHeader"></div>
@@ -133,7 +135,7 @@
 			<li>Our site uses cookies (a type of technology that stores user's preferences) for the advantage of the children who play the games online. Personal information irrelevant to the game is not stored in the process.</li>
 		</ul>
 		<p>
-			If you have any specific questions about the inventnow.org site or privacy policy, please contact us.(email link to  For more about the Ad Council's mission, please visit <a href="http://www.adcouncil.org/" target="_blank">www.adcouncil.org</a>, for information about The National Inventors Hall of Fame Foundation (NIHFF), please visit http://www.invent.org/ and for more info on the United States Patent and Trademark Office (USPTO), please visit <a href="http://www.invent.org/" target="_blank">www.uspto.gov</a>
+			If you have any specific questions about the inventnow.org site or privacy policy, please contact us.(email link to  For more about the Ad Council's mission, please visit <a href="http://www.adcouncil.org/" target="_blank">www.adcouncil.org</a>, for information about The National Inventors Hall of Fame Foundation (NIHFF), please visit http://www.invent.org/ and for more info on the United States Patent and Trademark Office (USPTO), please visit <a href="http://www.uspto.gov/" target="_blank">www.uspto.gov</a>.
 		</p>
 	</div>
 </div>
@@ -145,11 +147,12 @@
 			<div class="FooterLinks">
 				<a href="/privacy_policy/">Privacy Policy</a> |
 				<a href="/terms_of_use/">Terms of Use</a> |
-				<a href="/parents/">Parents &amp; Teachers</a>
+				<a href="/parents/">Parents &amp; Teachers</a> |
+				<a href="/contact/">Contact Us</a>
 			</div>
-			<a href="http://www.adcouncil.org/" target="_blank"><img src="/images/e1/t1/logo.footer.adcouncil.gif" border="0"></a> &nbsp;
-			<a href="http://www.invent.org/" target="_blank"><img src="/images/e1/t1/logo.footer.inventnow.gif" border="0"></a> &nbsp;
-			<a href="http://www.uspto.gov/" target="_blank"><img src="/images/e1/t1/logo.footer.uspto.gif" border="0"></a>
+			<a href="http://www.adcouncil.org/" target="_blank"><img src="/images/e1/t1/logo.footer.adcouncil.gif" border="0" alt="AdCountil"></a> &nbsp;
+			<a href="http://www.invent.org/" target="_blank"><img src="/images/e1/t1/logo.footer.inventnow.gif" border="0" alt="InventNow"></a> &nbsp;
+			<a href="http://www.uspto.gov/" target="_blank"><img src="/images/e1/t1/logo.footer.uspto.gif" border="0" alt="U.S. Patent and Trademark Office"></a>
 		</div>
 	</div>
 	<script>
@@ -162,5 +165,8 @@
 			}));
 		};
 	</script>
+
+
+
 
 </body></html>
